[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resource/Fonts/TextFontSubHeader.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scene/AuthBlock.gd" type="Script" id=2]
[ext_resource path="res://Scene/Loader.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resource/Fonts/TextFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Resource/TestElements/photo_2023-01-04_00-30-16.jpg" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=7]
VScrollBar/styles/grabber = SubResource( 5 )
VScrollBar/styles/scroll = SubResource( 6 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float circle_size : hint_range(0.0, 1.0) = 0.4;
uniform float ratio_width = 1.0;
uniform float ratio_height = 1.0;
uniform bool is_grayscale = false;

void fragment() {
	float ratio = ratio_width / ratio_height;
	float dist = distance(vec2(0.5, 0.5), vec2(mix(0.5, UV.x, ratio), UV.y));
	vec4 orig_color = texture(TEXTURE, UV);
	COLOR.rgb = orig_color.rgb;
	if (is_grayscale == true) {
		COLOR.rgb = vec3((orig_color.r + orig_color.g + orig_color.b) / 3.0);
	}
	COLOR.a = (1.0 - step(circle_size, dist)) * orig_color.a;
}

"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/circle_size = 0.479
shader_param/ratio_width = 1.812
shader_param/ratio_height = 1.0
shader_param/is_grayscale = false

[node name="AuthBlock" type="Control"]
anchor_right = 0.203125
anchor_bottom = 0.653333
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0, 0, 0, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -64.0001
margin_bottom = 67.9999
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Temporarily not working

Зона пользователя и его достижений"
align = 1
valign = 1
autowrap = true

[node name="Loader" parent="." instance=ExtResource( 3 )]
visible = false

[node name="DataList" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="DataList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -180.5
margin_right = 90.0
margin_bottom = 180.5
theme = SubResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="DataList/ScrollContainer"]
margin_right = 180.0
margin_bottom = 432.0
alignment = 1

[node name="Image" type="TextureRect" parent="DataList/ScrollContainer/VBoxContainer"]
material = SubResource( 4 )
margin_right = 180.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Empty" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 180.0
margin_bottom = 102.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
valign = 1
autowrap = true

[node name="name" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 180.0
margin_bottom = 124.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Имя: "
valign = 1
autowrap = true

[node name="surname" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 180.0
margin_bottom = 146.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Фамилия: "
valign = 1
autowrap = true

[node name="Empty2" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 180.0
margin_bottom = 168.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
valign = 1
autowrap = true

[node name="position" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 180.0
margin_bottom = 190.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Должность: "
valign = 1
autowrap = true

[node name="branch_name" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 180.0
margin_bottom = 212.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Филиал: "
valign = 1
autowrap = true

[node name="role_name" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 180.0
margin_bottom = 234.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Доступ: "
valign = 1
autowrap = true

[node name="role_id" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 238.0
margin_right = 180.0
margin_bottom = 256.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Доступ: "
valign = 1
autowrap = true

[node name="id" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 238.0
margin_right = 180.0
margin_bottom = 256.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Доступ: "
valign = 1
autowrap = true

[node name="Empty3" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 180.0
margin_bottom = 256.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
valign = 1
autowrap = true

[node name="Header_scheme" type="Label" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 180.0
margin_bottom = 278.0
rect_min_size = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Пройденные схемы:"
valign = 1
autowrap = true

[node name="RowList" type="ScrollContainer" parent="DataList/ScrollContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 180.0
margin_bottom = 432.0
rect_min_size = Vector2( 180, 150 )

[node name="VBoxContainer" type="VBoxContainer" parent="DataList/ScrollContainer/VBoxContainer/RowList"]
alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
